--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,27 @@
 {
-  "extends": "airbnb"
+  "extends": "airbnb",
+  "env": {
+    "node": true,
+    "browser": true,
+    "es6": true
+  },
+  "plugins": [
+    "react",
+    "jsx-a11y"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
+  "globals": {
+    "h": true
+  },
+  "rules": {
+    "react/prefer-stateless-function": 0,
+    "react/prop-types": 0,
+  },
 }
